crates/md-codec/tests/snapshots/json_snapshots__inspect@tr_keyonly.snap
---
source: crates/md-codec/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "key_index": 0,
          "tree": null
        },
        "kind": "Tr"
      },
      "tag": "Tr"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "f8f4008f3526e977b6d437f1f2d5d104"
  },
  "schema": "md-cli/1",
  "wallet_descriptor_template_id": {
    "hex": "cc85fe5c0a202887eb2b2ad3b1cc2b15"
  },
  "wallet_policy_id": {
    "fingerprint": "0x6f079e7c",
    "hex": "6f079e7c6be5f02d15d6e6f3176fde18"
  }
}
