crates/md-codec/tests/snapshots/json_snapshots__inspect@wsh_divergent_paths.snap
---
source: crates/md-codec/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": [
        [
          1,
          {
            "multipath": [
              {
                "hardened": false,
                "value": 2
              },
              {
                "hardened": false,
                "value": 3
              }
            ],
            "wildcard_hardened": false
          }
        ]
      ]
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "children": [
                  {
                    "body": {
                      "data": {
                        "index": 0
                      },
                      "kind": "KeyArg"
                    },
                    "tag": "PkK"
                  },
                  {
                    "body": {
                      "data": {
                        "index": 1
                      },
                      "kind": "KeyArg"
                    },
                    "tag": "PkK"
                  }
                ],
                "k": 2
              },
              "kind": "Variable"
            },
            "tag": "Multi"
          }
        ],
        "kind": "Children"
      },
      "tag": "Wsh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "86944edfb815a593826f482effa6f2d0"
  },
  "schema": "md-cli/1",
  "wallet_descriptor_template_id": {
    "hex": "68429c3298a4736c3edee86e7d30d997"
  },
  "wallet_policy_id": {
    "fingerprint": "0xe2fb00b2",
    "hex": "e2fb00b27022e7524e24204a8abd5d05"
  }
}
